fix prices in basic seed, remove product img max-height (no stretching, no no no -> choose better images!)

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -10,7 +10,7 @@
       //top: 50%;
       //transform: translateY(-50%);
       //ToDO Fix Image
-      max-height: 300px;
+      //max-height: 300px;
     }
   }
 
